# Madome-Synchronizer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
src/: lib.rs  main.rs  stage.rs
src/components/: mod.rs  nozomi.rs  url.rs
src/kafka/producer/: mod.rs
src/models/: book.rs  metadata.rs  mod.rs
src/parser/: galleries.rs  gallery.rs  gallery_block.rs  image.rs  mod.rs  nozomi.rs  url.rs
src/utils/: await_futures.rs  flat.rs  get_ext.rs  mod.rs  seperate.rs  text_store.rs
